changed to green reduced heading max width to try avoid overflow

--- a/src/styles/Base.scss
+++ b/src/styles/Base.scss
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Roboto&display=swap');
 
 //Styles--------------
-$boldBlue: #4DB6AC;
+// $boldBlue: #4DB6AC;
+$boldBlue: green;
 $softBlue:#B2DFDB;
 $boldPink:#b64d58;
 $softPink:#E498A6;
@@ -14,7 +15,7 @@ p {
 }
 .heading-container {
   position: absolute;
-  max-width: 100vw;
+  max-width: 90vw;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -22,7 +23,6 @@ p {
 
 .main-heading {
   font-size: 2.4rem;
-  max-width: 100wv;
   text-align: left;
   font-family: 'Patua One', cursive;
   width:20rem;
@@ -76,6 +76,7 @@ p {
     opacity: 1;
   }
 }
+
 @keyframes typingLast {
   0% { 
     width: 0; }
@@ -89,7 +90,7 @@ p {
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
+  from, to { border-color: transparent; }
   50% { border-color: $boldBlue; }
 }
 
